# auth

./: .env  .gitignore  .gitlab-ci.yml   docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
app/: .env  __init__.py  main.py
app/core/: config.py  logging.py
app/dependence/: role_checker.py
app/middleware/: admin_auth.py
app/migrations/: env.py
app/migrations/versions/: 0aa4a7603fc1_add_faculty_and_department_models.py  4162a812f3c8_inital_migration.py  75ce034b8b0e_add_faculty_and_department_models.py  97cd74627524_add_student.py  ec606df48080_correct_add_student.py
app/models/: __init__.py  base.py  views.py
app/models/permission/: model.py  view.py
app/models/role/: model.py  view.py
app/models/role_permission/: model.py  view.py
app/models/student/: model.py  view.py
app/models/user/: model.py  view.py
app/models/user_role/: model.py  view.py
app/modules/: router.py
app/modules/permission/: repository.py  router.py  schemas.py
app/modules/role/: repository.py  router.py  schemas.py
app/modules/user/: repository.py  router.py  schemas.py  service.py
app/modules/user/utils/: hemis_login.py
app/test/: conftest.py  test_permission.py  test_role.py  test_user.py
app/tests/: conftest.py  test_role.py  test_user.py
