[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "bcrypt<4.0",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "psycopg2-binary",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "sqladmin>=0.22.0",
    "sqlalchemy>=2.0.45",
    "ruff>=0.9.0",
]


[tool.pytest.ini_options]
# Add both the root and the app directory to the python path
pythonpath = [
  ".", "app"
]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::sqlalchemy.exc.SAWarning"
]



[tool.ruff]
# Target Python 3.14 features
target-version = "py314"
line-length = 88

[tool.ruff.lint]
# E/W = pycodestyle, F = Pyflakes, I = isort (import sorting)
select = ["E", "W", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"